src/apps/xtls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xray
  namespace: xtls
spec:
  selector:
    app: xray
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
