src/apps/xtls/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: xray
  namespace: xtls
spec:
  parentRefs:
    - name: kube-gateway
      namespace: envoy-gateway
      sectionName: https-netbird
  hostnames: ["cloud.lxft.dev"]
  rules:
    - matches:
        - path: { type: PathPrefix, value: /api/teleport }
      backendRefs:
        - name: xray
          port: 80
